Port library build and regressions to WPILib alpha 7